Project recipe_hub {
  database_type: 'PostgreSQL'
  Note: 'DB structure for holding recipes'
}


Table recipes {
  id int [pk, unique, increment, not null]
  name varchar
  created_at timestamp [default: `now()`]
  
  Indexes{
    id
    name
    created_at
  }
}

Table ingredient {
  id int [pk, unique, increment]
  name varchar(255)
  density real [default: null]
  
  Indexes{
    id
    name
  }
}

Table recipe_ingredient as RI {
  recipe_id int [not null, ref: > recipes.id]
  ingredient_id int [not null, ref: > ingredient.id]
  amount real [not null]
  type unit_type [not null]
  notes varchar
  Note: 'Stores ingredient and amount pairs for a recipe'
  
  Indexes {
    recipe_id [pk]
  }
}


Table instructions {
  id int [pk, unique, increment]
  recipe_id int [not null, ref: > recipes.id]
  ordinal int [not null, note: 'n-th instruction in recipe']
  instruction varchar
}



Enum unit_type{
  mass
  volume
  other
}



